--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
     <modules>
         <!--        <module>gentkit-color</module>-->
-        <!--        <module>gentkit-exception</module>-->
+        <module>gentkit-exception</module>
         <!--        <module>gentkit-logger</module>-->
         <!--        <module>gentkit-sample</module>-->
     </modules>
