feat(logger): implement customizable logging framework with SLF4J providers
- Created DefaultLoggerImpl as basic console logger implementation
- Added LoggerFactory for dynamic logger loading and provider management
- Implemented service loader utility to discover logger implementations
- Configured SLF4J with Logback and Log4j2 providers via service files
- Added colored console output configuration for both Logback and Log4j2
- Defined logger interface with standard log levels and formatting support
- Enabled automatic logger initialization through META-INF services
- Supported multiple logging frameworks integration via bridge dependencies
- Added exception handling utilities for throwable message formatting
- Provided configurable logger construction with class or name parameters

--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <modules>
         <!--        <module>gentkit-color</module>-->
         <module>gentkit-exception</module>
-        <!--        <module>gentkit-logger</module>-->
+        <module>gentkit-logger</module>
         <!--        <module>gentkit-sample</module>-->
     </modules>
 
