--- a/gentkit-exception/gentkit-exception/pom.xml
+++ b/gentkit-exception/gentkit-exception/pom.xml
@@ -17,6 +17,14 @@
         and easily integrable exception handling solutions.
     </description>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
     <developers>
         <developer>
             <name>田隆 (Len)</name>
