build: configure maven-jar-plugin for manifest entries
- Add maven-jar-plugin configuration to control manifest content
- Enable options for implementation, specification, and build environment entries
- Prepare for consistent JAR metadata across all modules
- Update plugin management section in parent POM
- Ensure proper archive configuration for generated JAR files

--- a/gentkit-exception/gentkit-exception/pom.xml
+++ b/gentkit-exception/gentkit-exception/pom.xml
@@ -17,6 +17,15 @@
         and easily integrable exception handling solutions.
     </description>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
     <developers>
         <developer>
             <name>田隆 (Len)</name>
