--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,15 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
                     <version>${maven-jar-plugin.version}</version>
+                    <configuration>
+                        <archive>
+                            <manifest>
+                                <!--                                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>-->
+                                <!--                                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>-->
+                                <!--                                <addBuildEnvironmentEntries>true</addBuildEnvironmentEntries>-->
+                            </manifest>
+                        </archive>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
