chore(version): update project version to jdk8 snapshot
- Changed revision property from 0.0.1-SNAPSHOT to 0.0.1-jdk8-SNAPSHOT
- Maintained gentkit.java.version at 8
- Kept UTF-8 charset configuration unchanged

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     </modules>
 
     <properties>
-        <revision>0.0.1-SNAPSHOT</revision>
+        <revision>0.0.1-jdk8-SNAPSHOT</revision>
 <!--        <revision>1.0.2-jdk8</revision>-->
         <gentkit.java.version>8</gentkit.java.version>
         <gentkit.charset>UTF-8</gentkit.charset>
