chore(maven): 添加开发环境配置文件
- 新增 dev 配置文件，用于本地开发环境
- 在 dev 配置文件中跳过部署插件执行
- 保留原有 release 配置文件不变

--- a/pom.xml
+++ b/pom.xml
@@ -249,6 +249,20 @@
 
     <profiles>
         <profile>
+            <id>dev</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-deploy-plugin</artifactId>
+                        <configuration>
+                            <skip>true</skip>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>release</id>
             <build>
                 <plugins>
